--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="pageMargin">5dp</dimen>
+    <dimen name="pageMargin">10dp</dimen>
     <dimen name="offset">5dp</dimen>
     <dimen name="pageMarginAndOffset">10dp</dimen>
-
+    <dimen name="divider_margin">78dp</dimen>
 </resources>
