--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,8 +73,9 @@
                 android:paddingEnd="10dp"
                 android:paddingBottom="5dp"
                 android:textAlignment="center"
-                android:textColor="#9A9A9A"
-                android:textSize="14sp"
+                android:textColorHint="#9A9A9A"
+                android:textColor="@color/black"
+                android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tabLayout" />
         </com.google.android.material.appbar.AppBarLayout>
