--- a/app/src/main/res/layout/fragment_banks.xml
+++ b/app/src/main/res/layout/fragment_banks.xml
@@ -17,27 +17,17 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="15dp">
+            android:layout_height="match_parent">
 
-
-
-
-            <LinearLayout
-                android:id="@+id/ll_No_data"
+            <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center"
-                android:orientation="vertical"
+                android:src="@drawable/banks"
                 app:layout_constraintBottom_toBottomOf="parent"
-                >
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/banks" />
-
-            </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
