--- a/app/src/main/res/layout/grid_list_row.xml
+++ b/app/src/main/res/layout/grid_list_row.xml
@@ -30,7 +30,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tvCustomerName"
+            android:id="@+id/tvName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
