--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,7 @@
                 android:background="@color/white"
                 android:drawableEnd="@drawable/ic_search"
                 android:drawablePadding="10dp"
-                android:gravity="center"
+                android:focusableInTouchMode="true"
                 android:hint="@string/search"
                 android:inputType="textPersonName"
                 android:paddingStart="15dp"
@@ -77,7 +77,7 @@
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tabLayout" />
+                app:layout_constraintTop_toBottomOf="@id/collapsing_toolbar_layout" />
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.core.widget.NestedScrollView
